# nexus-mobile

./: .gitignore  App.js  README.md  app.json  babel.config.js  package-lock.json  package.json  tsconfig.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: .gitignore  BUCK  build.gradle
android/app/src/main/cpp/: CMakeLists.txt  entrypoint.cpp
android/app/src/main/cpp/Nexus.androidframework/Headers/TAO/Operation/include/: genesis.h
android/gradle/wrapper/: gradle-wrapper.properties
components/: TabBarIcon.js
docs/: android-comprehensive-guide.md  nexus-core-entrypoint.md
ios/: Podfile  RCTHTTPRequestHandler+acceptSelfSign.m
ios/lib_nexus_mobile_core.xcframework/: Info.plist
ios/libboost.xcframework/: Info.plist
ios/libcrypto.xcframework/: Info.plist
ios/libssl.xcframework/: Info.plist
ios/libssl.xcframework/Headers/: opensslconf.h
ios/nexusmobile/: AppDelegate.h  AppDelegate.m  Info.plist  NexusCore.h  NexusCore.m  SplashScreen.storyboard  main.m
ios/nexusmobile.xcodeproj/: project.pbxproj
ios/nexusmobile.xcworkspace/: contents.xcworkspacedata
ios/nexusmobile/Base.lproj/: LaunchScreen.xib
ios/nexusmobile/Supporting/: Expo.plist  entrypoint.cpp  entrypoint.hpp
navigation/: BottomTabNavigator.js
patches/: react-native+0.63.4.patch
screens/: HomeScreen.js  SendScreen.js
src/: Dialogs.js  Notifications.js  Root.js  index.js
src/App/: BaseScreen.js  Dialogs.js  DrawerNavigator.js  Notifications.js  StackNavigator.js  StatusBar.js  ThemeContainer.js  index.js  initStore.js
src/App/AuthenticatedBase/: index.js
src/App/OverviewScreen/: Accounts.js  BalanceSection.js  index.js
src/App/SideBar/: MenuItem.js  SideBarHeader.js  SideMenu.js
src/App/UnauthenticatedBase/: Backdrop.js  CreateUserScreen.js  LoginScreen.js  RecoveryScreen.js  index.js
src/App/screens/: AboutScreen.js  AccountDetailsScreen.js  AccountsScreen.js  ChangePasswordScreen.js  ConfirmSendScreen.js  CoreInfoScreen.js  EmeddedCoreLogReaderScreen.js  ExternalCoreConfigScreen.js  NamesScreen.js  NamespacesScreen.js  NewAccountScreen.js  NewContactScreen.js  ReceiveScreen.js  RenameAccountScreen.js  SetRecoveryScreen.js
src/Main/: Base.js  index.js
src/components/: Adaptive.js  AddressPicker.js  AgnosticComponent.js  AttentionIcon.js  Button.android.js  Button.ios.js  Button.js  Component.js  ConfirmationDialog.js  CustomBottomTabBar.js  Dialog.js  Divider.js  ErrorDialog.js  ExpandableView.js  InfoDialog.js  InfoField.js  Modal.js  NativeButton.js  OnboardingDialog.js  OptionsDialog.js  PinDialog.js  PinModal.js  Portal.js  ScreenBody.js  Select.js  SelectOptions.js  StyledText.js  SuccessDialog.js  SvgIcon.js  Switch.js  SyncIndicator.js  TabBarIcon.js  Text.js  TextBox.js  TokenName.js  TokenSelector.js  TouchableIcon.js  Typo.js  ZeroConnectionsOverlay.js
src/components/AddressPicker/: Contact.js  ContactSelector.js  ContactsSelector.js  QRScanner.js  index.js
src/constants/: themes.js
src/consts/: actionTypes.js  baseCurrencies.js  regex.js
src/hooks/: useColorName.js
src/lib/: ColorContext.js  adaptive.js  api.js  contacts.js  contracts.js  coreInfo.js  fees.js  market.js  navigation.js  notifications.js  session.js  settings.js  theme.js  tokens.js  transactions.js  ui.js  user.js
src/navigation/: BaseScreen.js  BottomTabNavigator.js  DrawerNavigator.js  LoggedInScreen.js  RootNavigator.js  SideMenu.js  StackNavigator.js  bottomTabScreens.js  container.js  rootNavigator.js
src/navigation/AuthenticatedBase/: index.js
src/navigation/AuthenticationScreen/: Backdrop.js  CreateUserScreen.js  LoginScreen.js  RecoveryScreen.js  index.js
src/navigation/LoggedInScreen/: index.js
src/navigation/SideBar/: SideBarHeader.js  index.js
src/navigation/UnauthenticatedBase/: Backdrop.js  CreateUserScreen.js  LoginScreen.js  RecoveryScreen.js  index.js
src/screens/: AccountDetailsScreen.js  AccountsScreen.js  AssetsScreen.js  ChangePasswordScreen.js  ConfirmSendScreen.js  ContactDetailsScreen.js  CreateAccountScreen.js  ExternalCoreConfigScreen.js  HomeScreen.js  LinksScreen.js  NamesScreen.js  NamespacesScreen.js  NewAccountScreen.js  NewContactScreen.js  ReceiveScreen.js  SendScreen.js  SetRecoveryScreen.js  TokensScreen.js  TransactionsScreen.js
src/screens/AccountsScreen/: AccountDetails.js  index.js
src/screens/AddressBookScreen/: Contact.js  index.js
src/screens/ContactDetailsScreen/: index.js
src/screens/ContactsScreen/: Contact.js  index.js
src/screens/HomeScreen/: Account.js  BalanceSection.js  index.js
src/screens/OverviewScreen/: Account.js  BalanceSection.js  index.js
src/store/: configureStore.js  getInitialState.js  index.js  loadInitialState.js
src/utils/: color.js  debounced.js  formatNumber.js  listAll.js  newUID.js  resolveColor.js  segmentAddress.js  sleep.js  styles.js  useKeyboardOpen.js  useMounted.js  useRefresh.js
(+105 files in other folders)
